@@ -16,10 +16,10 @@
  */
 package org.graylog.security.shares;
 
-import com.google.auto.value.AutoValue;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Maps;
 import com.google.common.primitives.Ints;
+import jakarta.inject.Inject;
 import org.graylog.grn.GRN;
 import org.graylog.grn.GRNDescriptor;
 import org.graylog.grn.GRNDescriptorService;
@@ -29,11 +29,8 @@ import org.graylog.security.DBGrantService;
 import org.graylog.security.GrantDTO;
 import org.graylog.security.entities.EntityDescriptor;
 import org.graylog2.database.PaginatedList;
+import org.graylog2.database.pagination.EntityPaginationHelper;
 import org.graylog2.rest.PaginationParameters;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import jakarta.inject.Inject;
 
 import java.util.Collections;
 import java.util.Comparator;
@@ -43,47 +40,57 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
-import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.google.common.base.MoreObjects.firstNonNull;
-
 public class GranteeSharesService {
-    private static final Logger LOG = LoggerFactory.getLogger(GranteeSharesService.class);
 
     private final DBGrantService grantService;
     private final GRNDescriptorService descriptorService;
     private final GranteeService granteeService;
+    private final PluggableEntityService pluggableEntityService;
 
     @Inject
     public GranteeSharesService(DBGrantService grantService,
-                                GRNDescriptorService descriptorService, GranteeService granteeService) {
+                                GRNDescriptorService descriptorService,
+                                GranteeService granteeService,
+                                PluggableEntityService pluggableEntityService) {
         this.grantService = grantService;
         this.descriptorService = descriptorService;
         this.granteeService = granteeService;
+        this.pluggableEntityService = pluggableEntityService;
+    }
+
+    public Set<GrantDTO> grantsByGrantee(GRN grantee){
+        final Set<GRN> granteeAliases = granteeService.getGranteeAliases(grantee);
+        return grantService.getForGranteesOrGlobal(granteeAliases);
     }
 
     public SharesResponse getPaginatedSharesFor(GRN grantee,
                                                 PaginationParameters paginationParameters,
                                                 String capabilityFilterString,
                                                 String entityTypeFilterString) {
-        final Optional<Capability> capability = parseCapabilityFilter(capabilityFilterString);
+        final Optional<Capability> capability = EntityPaginationHelper.parseCapabilityFilter(capabilityFilterString);
         // Get all aliases for the grantee to make sure we find all entities the grantee has access to
         final Set<GRN> granteeAliases = granteeService.getGranteeAliases(grantee);
+
         final ImmutableSet<GrantDTO> grants = capability
                 .map(c -> grantService.getForGranteesOrGlobalWithCapability(granteeAliases, c))
                 .orElseGet(() -> grantService.getForGranteesOrGlobal(granteeAliases));
 
-        final Set<GRN> targets = grants.stream().map(GrantDTO::target).collect(Collectors.toSet());
+        final Set<GRN> targets = grants.stream()
+                .map(GrantDTO::target)
+                .flatMap(pluggableEntityService::expand)
+                .filter(pluggableEntityService.excludeTypesFilter())
+                .collect(Collectors.toSet());
 
         final Map<GRN, Set<Grantee>> targetOwners = getTargetOwners(targets);
 
         final Supplier<Stream<EntityDescriptor>> filteredStream = () -> targets.stream()
                 .map(descriptorService::getDescriptor)
-                .filter(queryPredicate(paginationParameters))
-                .filter(entityTypeFilterPredicate(entityTypeFilterString))
+                .filter(EntityPaginationHelper.queryPredicate(paginationParameters.getQuery()))
+                .filter(EntityPaginationHelper.entityFiltersDescriptorPredicate(List.of(entityTypeFilterString)))
                 .map(toEntityDescriptor(targetOwners))
                 .sorted(Comparator.comparing(EntityDescriptor::title, (t1, t2) -> {
                     if (paginationParameters.getOrder().toLowerCase(Locale.US).equals("desc")) {
@@ -95,9 +102,9 @@ public class GranteeSharesService {
         final int filteredResultCount = Ints.saturatedCast(filteredStream.get().count());
 
         final List<EntityDescriptor> entityDescriptors = filteredStream.get()
-                .skip(paginationParameters.getPerPage() * (paginationParameters.getPage() - 1))
+                .skip((long) paginationParameters.getPerPage() * (paginationParameters.getPage() - 1))
                 .limit(paginationParameters.getPerPage())
-                .collect(Collectors.toList());
+                .toList();
 
         final Set<GRN> entityDescriptorsGRNs = entityDescriptors.stream()
                 .map(EntityDescriptor::id)
@@ -123,7 +130,7 @@ public class GranteeSharesService {
                 (long) targets.size()
         );
 
-        return SharesResponse.create(paginatedList, granteeCapabilities);
+        return new SharesResponse(paginatedList, granteeCapabilities);
     }
 
     private Function<GRNDescriptor, EntityDescriptor> toEntityDescriptor(Map<GRN, Set<Grantee>> targetOwners) {
@@ -134,7 +141,7 @@ public class GranteeSharesService {
         );
     }
 
-    private Map<GRN, Set<Grantee>> getTargetOwners(Set<GRN> targets) {
+    public Map<GRN, Set<Grantee>> getTargetOwners(Set<GRN> targets) {
         return grantService.getOwnersForTargets(targets).entrySet()
                 .stream()
                 .map(entry -> Maps.immutableEntry(entry.getKey(), getOwners(entry)))
@@ -154,49 +161,8 @@ public class GranteeSharesService {
                 .collect(Collectors.toSet());
     }
 
-    private Optional<Capability> parseCapabilityFilter(String capabilityFilterString) {
-        final String capabilityFilter = firstNonNull(capabilityFilterString, "").trim().toUpperCase(Locale.US);
-
-        if (capabilityFilter.isEmpty()) {
-            return Optional.empty();
-        }
-
-        try {
-            return Optional.of(Capability.valueOf(capabilityFilter));
-        } catch (IllegalArgumentException e) {
-            LOG.warn("Unknown capability", e);
-            return Optional.empty();
-        }
-    }
-
-    private Predicate<GRNDescriptor> queryPredicate(PaginationParameters paginationParameters) {
-        final String query = firstNonNull(paginationParameters.getQuery(), "").trim().toLowerCase(Locale.US);
-
-        if (query.isEmpty()) {
-            return descriptor -> true;
-        }
-
-        return descriptor -> descriptor.title().toLowerCase(Locale.US).contains(query);
-    }
-
-    private Predicate<GRNDescriptor> entityTypeFilterPredicate(String entityTypeFilter) {
-        final String type = firstNonNull(entityTypeFilter, "").trim().toLowerCase(Locale.US);
-
-        if (type.isEmpty()) {
-            return descriptor -> true;
-        }
-
-        return descriptor -> descriptor.grn().type().equals(type);
-    }
-
-    @AutoValue
-    public static abstract class SharesResponse {
-        public abstract PaginatedList<EntityDescriptor> paginatedEntities();
-
-        public abstract Map<GRN, Capability> capabilities();
-
-        public static SharesResponse create(PaginatedList<EntityDescriptor> paginatedEntities, Map<GRN, Capability> capabilities) {
-            return new AutoValue_GranteeSharesService_SharesResponse(paginatedEntities, capabilities);
-        }
+    public record SharesResponse(
+            PaginatedList<EntityDescriptor> paginatedEntities,
+            Map<GRN, Capability> capabilities) {
     }
 }
