@@ -17,74 +17,23 @@
 package org.graylog2.rest.resources.users;
 
 import com.codahale.metrics.annotation.Timed;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Iterables;
+import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
-import io.swagger.annotations.ApiResponse;
-import io.swagger.annotations.ApiResponses;
-import org.apache.commons.lang.StringUtils;
-import org.apache.shiro.authz.annotation.RequiresAuthentication;
-import org.apache.shiro.authz.annotation.RequiresPermissions;
-import org.apache.shiro.authz.permission.WildcardPermission;
-import org.apache.shiro.mgt.DefaultSecurityManager;
-import org.apache.shiro.session.Session;
-import org.apache.shiro.subject.Subject;
-import org.graylog.plugins.views.search.permissions.SearchUser;
-import org.graylog.security.UserContext;
-import org.graylog.security.authservice.AuthServiceBackendDTO;
-import org.graylog.security.authservice.GlobalAuthServiceConfig;
-import org.graylog.security.permissions.GRNPermission;
-import org.graylog2.audit.AuditEventTypes;
-import org.graylog2.audit.jersey.AuditEvent;
-import org.graylog2.database.PaginatedList;
-import org.graylog2.plugin.database.ValidationException;
-import org.graylog2.plugin.database.users.User;
-import org.graylog2.rest.models.PaginatedResponse;
-import org.graylog2.rest.models.users.requests.ChangePasswordRequest;
-import org.graylog2.rest.models.users.requests.CreateUserRequest;
-import org.graylog2.rest.models.users.requests.PermissionEditRequest;
-import org.graylog2.rest.models.users.requests.Startpage;
-import org.graylog2.rest.models.users.requests.UpdateUserPreferences;
-import org.graylog2.rest.models.users.responses.Token;
-import org.graylog2.rest.models.users.responses.TokenList;
-import org.graylog2.rest.models.users.responses.TokenSummary;
-import org.graylog2.rest.models.users.responses.UserList;
-import org.graylog2.rest.models.users.responses.UserSummary;
-import org.graylog2.search.SearchQuery;
-import org.graylog2.search.SearchQueryField;
-import org.graylog2.search.SearchQueryParser;
-import org.graylog2.security.AccessToken;
-import org.graylog2.security.AccessTokenService;
-import org.graylog2.security.MongoDBSessionService;
-import org.graylog2.security.MongoDbSession;
-import org.graylog2.security.UserSessionTerminationService;
-import org.graylog2.shared.rest.resources.RestResource;
-import org.graylog2.shared.security.RestPermissions;
-import org.graylog2.shared.users.ChangeUserRequest;
-import org.graylog2.shared.users.Role;
-import org.graylog2.shared.users.Roles;
-import org.graylog2.shared.users.UserManagementService;
-import org.graylog2.users.PaginatedUserService;
-import org.graylog2.users.RoleService;
-import org.graylog2.users.RoleServiceImpl;
-import org.graylog2.users.UserOverviewDTO;
-import org.joda.time.DateTimeZone;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
-import javax.annotation.Nullable;
-
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.parameters.RequestBody;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.inject.Inject;
-
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
-
 import jakarta.ws.rs.BadRequestException;
 import jakarta.ws.rs.Consumes;
 import jakarta.ws.rs.DELETE;
@@ -102,9 +51,67 @@ import jakarta.ws.rs.QueryParam;
 import jakarta.ws.rs.core.Context;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.Response;
+import org.apache.shiro.authz.annotation.RequiresAuthentication;
+import org.apache.shiro.authz.annotation.RequiresPermissions;
+import org.apache.shiro.authz.permission.WildcardPermission;
+import org.apache.shiro.mgt.DefaultSecurityManager;
+import org.apache.shiro.session.Session;
+import org.apache.shiro.subject.Subject;
+import org.graylog.plugins.views.search.permissions.SearchUser;
+import org.graylog.security.UserContext;
+import org.graylog.security.authservice.AuthServiceBackendDTO;
+import org.graylog.security.authservice.GlobalAuthServiceConfig;
+import org.graylog.security.permissions.CaseSensitiveWildcardPermission;
+import org.graylog.security.permissions.GRNPermission;
+import org.graylog2.audit.AuditActor;
+import org.graylog2.audit.AuditEventSender;
+import org.graylog2.audit.AuditEventTypes;
+import org.graylog2.audit.jersey.AuditEvent;
+import org.graylog2.database.PaginatedList;
+import org.graylog2.plugin.cluster.ClusterConfigService;
+import org.graylog2.plugin.database.ValidationException;
+import org.graylog2.plugin.database.users.User;
+import org.graylog2.rest.models.PaginatedResponse;
+import org.graylog2.rest.models.SortOrder;
+import org.graylog2.rest.models.users.requests.ChangePasswordRequest;
+import org.graylog2.rest.models.users.requests.CreateUserRequest;
+import org.graylog2.rest.models.users.requests.PermissionEditRequest;
+import org.graylog2.rest.models.users.requests.Startpage;
+import org.graylog2.rest.models.users.requests.UpdateUserPreferences;
+import org.graylog2.rest.models.users.responses.BasicUserResponse;
+import org.graylog2.rest.models.users.responses.Token;
+import org.graylog2.rest.models.users.responses.TokenList;
+import org.graylog2.rest.models.users.responses.TokenSummary;
+import org.graylog2.rest.models.users.responses.UserList;
+import org.graylog2.rest.models.users.responses.UserSummary;
+import org.graylog2.rest.models.users.responses.UsernameAvailabilityResponse;
+import org.graylog2.search.SearchQuery;
+import org.graylog2.search.SearchQueryField;
+import org.graylog2.search.SearchQueryParser;
+import org.graylog2.security.AccessToken;
+import org.graylog2.security.AccessTokenService;
+import org.graylog2.security.UserSessionTerminationService;
+import org.graylog2.security.sessions.SessionDTO;
+import org.graylog2.security.sessions.SessionService;
+import org.graylog2.shared.rest.PublicCloudAPI;
+import org.graylog2.shared.rest.resources.RestResource;
+import org.graylog2.shared.security.RestPermissions;
+import org.graylog2.shared.users.ChangeUserRequest;
+import org.graylog2.shared.users.Role;
+import org.graylog2.shared.users.UserManagementService;
+import org.graylog2.users.PaginatedUserService;
+import org.graylog2.users.PasswordComplexityConfig;
+import org.graylog2.users.RoleService;
+import org.graylog2.users.RoleServiceImpl;
+import org.graylog2.users.UserConfiguration;
+import org.graylog2.users.UserOverviewDTO;
+import org.joda.time.DateTimeZone;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.threeten.extra.PeriodDuration;
 
+import javax.annotation.Nullable;
 import java.net.URI;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
@@ -116,36 +123,45 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.maxBy;
-import static org.graylog2.shared.rest.documentation.generator.Generator.CLOUD_VISIBLE;
 import static org.graylog2.shared.security.RestPermissions.USERS_EDIT;
 import static org.graylog2.shared.security.RestPermissions.USERS_PERMISSIONSEDIT;
+import static org.graylog2.shared.security.RestPermissions.USERS_READ;
 import static org.graylog2.shared.security.RestPermissions.USERS_ROLESEDIT;
 import static org.graylog2.shared.security.RestPermissions.USERS_TOKENCREATE;
 import static org.graylog2.shared.security.RestPermissions.USERS_TOKENLIST;
 import static org.graylog2.shared.security.RestPermissions.USERS_TOKENREMOVE;
+import static org.graylog2.users.PasswordComplexityConfig.SPECIAL_CHARACTERS;
+import static org.graylog2.users.PasswordComplexityConfig.SPECIAL_CHARACTERS_CODEPOINTS;
 
 @RequiresAuthentication
 @Path("/users")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
-@Api(value = "Users", description = "User accounts", tags = {CLOUD_VISIBLE})
+@PublicCloudAPI
+@Tag(name = "Users", description = "User accounts")
 public class UsersResource extends RestResource {
     private static final Logger LOG = LoggerFactory.getLogger(UsersResource.class);
+    private static final int USERNAME_PERMISSION_PARTS_LENGTH = 3;
+    private static final String USER_PERMISSION_DOMAIN = "users";
 
     private final UserManagementService userManagementService;
     private final PaginatedUserService paginatedUserService;
     private final AccessTokenService accessTokenService;
     private final RoleService roleService;
-    private final MongoDBSessionService sessionService;
+    private final SessionService sessionService;
     private final SearchQueryParser searchQueryParser;
     private final UserSessionTerminationService sessionTerminationService;
     private final DefaultSecurityManager securityManager;
     private final GlobalAuthServiceConfig globalAuthServiceConfig;
+    private final ClusterConfigService clusterConfigService;
+    private final AuditEventSender auditEventSender;
 
     protected static final ImmutableMap<String, SearchQueryField> SEARCH_FIELD_MAPPING = ImmutableMap.<String, SearchQueryField>builder()
             .put(UserOverviewDTO.FIELD_ID, SearchQueryField.create("_id", SearchQueryField.Type.OBJECT_ID))
@@ -159,9 +175,12 @@ public class UsersResource extends RestResource {
                          PaginatedUserService paginatedUserService,
                          AccessTokenService accessTokenService,
                          RoleService roleService,
-                         MongoDBSessionService sessionService,
-                         UserSessionTerminationService sessionTerminationService, DefaultSecurityManager securityManager,
-                         GlobalAuthServiceConfig globalAuthServiceConfig) {
+                         SessionService sessionService,
+                         UserSessionTerminationService sessionTerminationService,
+                         DefaultSecurityManager securityManager,
+                         GlobalAuthServiceConfig globalAuthServiceConfig,
+                         ClusterConfigService clusterConfigService,
+                         AuditEventSender auditEventSender) {
         this.userManagementService = userManagementService;
         this.accessTokenService = accessTokenService;
         this.roleService = roleService;
@@ -171,6 +190,8 @@ public class UsersResource extends RestResource {
         this.securityManager = securityManager;
         this.searchQueryParser = new SearchQueryParser(UserOverviewDTO.FIELD_FULL_NAME, SEARCH_FIELD_MAPPING);
         this.globalAuthServiceConfig = globalAuthServiceConfig;
+        this.clusterConfigService = clusterConfigService;
+        this.auditEventSender = auditEventSender;
     }
 
     /**
@@ -179,12 +200,13 @@ public class UsersResource extends RestResource {
     @GET
     @Deprecated
     @Path("{username}")
-    @ApiOperation(value = "Get user details", notes = "The user's permissions are only included if a user asks for his " +
+    @Operation(summary = "Get user details", description = "The user's permissions are only included if a user asks for his " +
             "own account or for users with the necessary permissions to edit permissions.")
     @ApiResponses({
-            @ApiResponse(code = 404, message = "The user could not be found.")
+            @ApiResponse(responseCode = "200", description = "Returns the user", useReturnTypeSchema = true),
+            @ApiResponse(responseCode = "404", description = "The user could not be found.")
     })
-    public UserSummary get(@ApiParam(name = "username", value = "The username to return information for.", required = true)
+    public UserSummary get(@Parameter(name = "username", description = "The username to return information for.", required = true)
                            @PathParam("username") String username,
                            @Context UserContext userContext) {
         // If a user has permissions to edit another user's profile, it should be able to see it.
@@ -202,12 +224,13 @@ public class UsersResource extends RestResource {
 
     @GET
     @Path("id/{userId}")
-    @ApiOperation(value = "Get user details by userId", notes = "The user's permissions are only included if a user asks for his " +
+    @Operation(summary = "Get user details by userId", description = "The user's permissions are only included if a user asks for his " +
             "own account or for users with the necessary permissions to edit permissions.")
     @ApiResponses({
-            @ApiResponse(code = 404, message = "The user could not be found.")
+            @ApiResponse(responseCode = "200", description = "Returns the user", useReturnTypeSchema = true),
+            @ApiResponse(responseCode = "404", description = "The user could not be found.")
     })
-    public UserSummary getbyId(@ApiParam(name = "userId", value = "The userId to return information for.", required = true)
+    public UserSummary getbyId(@Parameter(name = "userId", description = "The userId to return information for.", required = true)
                                @PathParam("userId") String userId,
                                @Context UserContext userContext) {
 
@@ -229,15 +252,38 @@ public class UsersResource extends RestResource {
         return toUserResponse(user, isSelf || canEditUserPermissions, Optional.of(AllUserSessions.create(sessionService)));
     }
 
+    @GET
+    @Path("/basic/id/{userId}")
+    @Operation(summary = "Get basic user data by userId")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Returns user info", useReturnTypeSchema = true),
+            @ApiResponse(responseCode = "404", description = "The user could not be found.")
+    })
+    public BasicUserResponse getBasicUserById(@Parameter(name = "userId", description = "The userId to return information for.", required = true)
+                                              @PathParam("userId") String userId) {
+
+        final User user = loadUserById(userId);
+        if (!isPermitted(USERS_READ, user.getName())) {
+            throw new ForbiddenException("Not allowed to view userId " + userId);
+        }
+        return BasicUserResponse.builder()
+                .id(user.getId())
+                .username(user.getName())
+                .fullName(user.getFullName())
+                .readOnly(user.isReadOnly())
+                .isServiceAccount(user.isServiceAccount())
+                .build();
+    }
+
     /**
      * @deprecated Use the paginated call instead
      */
     @GET
     @Deprecated
-    @ApiOperation(value = "List all users", notes = "Permissions and session data included by default")
+    @Operation(summary = "List all users", description = "Permissions and session data included by default")
     public UserList listUsers(
-            @ApiParam(name = "include_permissions") @QueryParam("include_permissions") @DefaultValue("true") boolean includePermissions,
-            @ApiParam(name = "include_sessions") @QueryParam("include_sessions") @DefaultValue("true") boolean includeSessions,
+            @Parameter(name = "include_permissions") @QueryParam("include_permissions") @DefaultValue("true") boolean includePermissions,
+            @Parameter(name = "include_sessions") @QueryParam("include_sessions") @DefaultValue("true") boolean includeSessions,
             @Context SearchUser searchUser) {
         final Optional<AllUserSessions> optSessions = includeSessions ? Optional.of(AllUserSessions.create(sessionService)) : Optional.empty();
         return searchUser.isPermitted(RestPermissions.USERS_LIST) ?
@@ -253,12 +299,17 @@ public class UsersResource extends RestResource {
         final List<User> users = userManagementService.loadAll();
 
         final List<UserSummary> resultUsers = Lists.newArrayListWithCapacity(users.size() + 1);
-        userManagementService.getRootUser().ifPresent(adminUser ->
-                resultUsers.add(toUserResponse(adminUser, includePermissions, optSessions))
+        userManagementService.getRootUser().ifPresent(adminUser -> {
+                    if (isPermitted(USERS_READ, adminUser.getName())) {
+                        resultUsers.add(toUserResponse(adminUser, includePermissions, optSessions));
+                    }
+                }
         );
 
         for (User user : users) {
-            resultUsers.add(toUserResponse(user, includePermissions, optSessions));
+            if (isPermitted(USERS_READ, user.getName())) {
+                resultUsers.add(toUserResponse(user, includePermissions, optSessions));
+            }
         }
 
         return UserList.create(resultUsers);
@@ -267,19 +318,19 @@ public class UsersResource extends RestResource {
     @GET
     @Timed
     @Path("/paginated")
-    @ApiOperation(value = "Get paginated list of users")
-    @RequiresPermissions(RestPermissions.USERS_LIST)
+    @Operation(summary = "Get paginated list of users")
     @Produces(MediaType.APPLICATION_JSON)
-    public PaginatedResponse<UserOverviewDTO> getPage(@ApiParam(name = "page") @QueryParam("page") @DefaultValue("1") int page,
-                                                      @ApiParam(name = "per_page") @QueryParam("per_page") @DefaultValue("50") int perPage,
-                                                      @ApiParam(name = "query") @QueryParam("query") @DefaultValue("") String query,
-                                                      @ApiParam(name = "sort",
-                                                                value = "The field to sort the result on",
-                                                                required = true,
-                                                                allowableValues = "title,description")
+    public PaginatedResponse<UserOverviewDTO> getPage(@Parameter(name = "page") @QueryParam("page") @DefaultValue("1") int page,
+                                                      @Parameter(name = "per_page") @QueryParam("per_page") @DefaultValue("50") int perPage,
+                                                      @Parameter(name = "query") @QueryParam("query") @DefaultValue("") String query,
+                                                      @Parameter(name = "sort",
+                                                              description = "The field to sort the result on",
+                                                              required = true,
+                                                              schema = @Schema(allowableValues = {"username", "full_name", "email"}))
                                                       @DefaultValue(UserOverviewDTO.FIELD_FULL_NAME) @QueryParam("sort") String sort,
-                                                      @ApiParam(name = "order", value = "The sort direction", allowableValues = "asc, desc")
-                                                      @DefaultValue("asc") @QueryParam("order") String order) {
+                                                      @Parameter(name = "order", description = "The sort direction",
+                                                              schema = @Schema(allowableValues = {"asc", "desc"}))
+                                                      @DefaultValue("asc") @QueryParam("order") SortOrder order) {
 
         SearchQuery searchQuery;
         final AllUserSessions sessions = AllUserSessions.create(sessionService);
@@ -289,8 +340,9 @@ public class UsersResource extends RestResource {
             throw new BadRequestException("Invalid argument in search query: " + e.getMessage());
         }
 
+        final Predicate<String> userNamePermissionPredicate = username -> isPermitted(USERS_READ, username);
         final PaginatedList<UserOverviewDTO> result = paginatedUserService
-                .findPaginated(searchQuery, page, perPage, sort, order);
+                .findPaginated(userNamePermissionPredicate, searchQuery, page, perPage, sort, order);
         final Set<String> allRoleIds = result.stream().flatMap(userDTO -> {
             if (userDTO.roles() != null) {
                 return userDTO.roles().stream();
@@ -305,7 +357,8 @@ public class UsersResource extends RestResource {
             throw new NotFoundException("Couldn't find roles: " + e.getMessage());
         }
 
-        final UserOverviewDTO adminUser = getAdminUserDTO(sessions);
+        final Map<String, Object> adminContextMap = new HashMap<>();
+        getAdminUserDTO(sessions).ifPresent(adminUserDTO -> adminContextMap.put("admin_user", adminUserDTO));
 
         final Optional<AuthServiceBackendDTO> activeAuthService = globalAuthServiceConfig.getActiveBackendConfig();
 
@@ -316,28 +369,28 @@ public class UsersResource extends RestResource {
                 builder.roles(userDTO.roles().stream().map(roleNameMap::get).collect(Collectors.toSet()));
             }
             userDTO.authServiceId().ifPresent(
-                    serviceId -> {
-                        builder.authServiceEnabled(activeAuthService.isPresent() && serviceId.equals(activeAuthService.get().id()));
-                    }
+                    serviceId -> builder.authServiceEnabled(activeAuthService.isPresent() && serviceId.equals(activeAuthService.get().id()))
             );
             return builder.build();
-        }).collect(Collectors.toList());
+        }).toList();
 
         final PaginatedList<UserOverviewDTO> userOverviewDTOS = new PaginatedList<>(users, result.pagination().total(),
                 result.pagination().page(), result.pagination().perPage());
-        return PaginatedResponse.create("users", userOverviewDTOS, query, Collections.singletonMap("admin_user", adminUser));
+        return PaginatedResponse.create("users", userOverviewDTOS, query, adminContextMap);
     }
 
     @POST
     @RequiresPermissions(RestPermissions.USERS_CREATE)
-    @ApiOperation("Create a new user account.")
+    @Operation(summary = "Create a new user account.")
     @ApiResponses({
-            @ApiResponse(code = 400, message = "Missing or invalid user details.")
+            @ApiResponse(responseCode = "201", description = "Created"),
+            @ApiResponse(responseCode = "400", description = "Missing or invalid user details.")
     })
     @AuditEvent(type = AuditEventTypes.USER_CREATE)
-    public Response create(@ApiParam(name = "JSON body", value = "Must contain username, full_name, email, password and a list of permissions.", required = true)
-                           @Valid @NotNull CreateUserRequest cr) throws ValidationException {
-        if (userManagementService.load(cr.username()) != null) {
+    public Response create(@RequestBody(description = "Must contain username, full_name, email, password and a list of permissions.", required = true)
+                               @Valid @NotNull CreateUserRequest cr,
+                           @Context UserContext userContext) throws ValidationException {
+        if (isUserNameInUse(cr.username())) {
             final String msg = "Cannot create user " + cr.username() + ". Username is already taken.";
             LOG.error(msg);
             throw new BadRequestException(msg);
@@ -345,6 +398,7 @@ public class UsersResource extends RestResource {
         if (rolesContainAdmin(cr.roles()) && cr.isServiceAccount()) {
             throw new BadRequestException("Cannot assign Admin role to service account");
         }
+        validatePasswordComplexity(cr.password());
 
         // Create user.
         User user = userManagementService.create();
@@ -353,7 +407,7 @@ public class UsersResource extends RestResource {
         user.setFirstLastFullNames(cr.firstName(), cr.lastName());
         user.setEmail(cr.email());
         user.setPermissions(cr.permissions());
-        setUserRoles(cr.roles(), user);
+        setUserRoles(cr.roles(), user, userContext);
         user.setServiceAccount(cr.isServiceAccount());
 
         if (cr.timezone() != null) {
@@ -367,10 +421,10 @@ public class UsersResource extends RestResource {
 
         final Startpage startpage = cr.startpage();
         if (startpage != null) {
-            user.setStartpage(startpage.type(), startpage.id());
+            user.setStartpage(startpage);
         }
 
-        final String id = userManagementService.create(user);
+        final String id = userManagementService.create(user, getCurrentUser());
         LOG.debug("Saved user {} with id {}", user.getName(), id);
 
         final URI userUri = getUriBuilderToSelf().path(UsersResource.class)
@@ -380,41 +434,114 @@ public class UsersResource extends RestResource {
         return Response.created(userUri).build();
     }
 
-    private void setUserRoles(@Nullable List<String> roles, User user) {
-        if (roles != null) {
-            try {
-                final Map<String, Role> nameMap = roleService.loadAllLowercaseNameMap();
-                List<String> unknownRoles = new ArrayList<>();
-                roles.forEach(roleName -> {
-                    if (!nameMap.containsKey(roleName.toLowerCase(Locale.US))) {
-                        unknownRoles.add(roleName);
-                    }
-                });
-                if (!unknownRoles.isEmpty()) {
-                    throw new BadRequestException(
-                            String.format(Locale.ENGLISH, "Invalid role names: %s", StringUtils.join(unknownRoles, ", "))
-                    );
-                }
-                final Iterable<String> roleIds = Iterables.transform(roles, Roles.roleNameToIdFunction(nameMap));
-                user.setRoleIds(Sets.newHashSet(roleIds));
-            } catch (org.graylog2.database.NotFoundException e) {
-                throw new InternalServerErrorException(e);
+    @GET
+    @RequiresPermissions(RestPermissions.USERS_CREATE)
+    @Path("/username_availability")
+    @Operation(summary = "Check if a username is still available")
+    @Produces(MediaType.APPLICATION_JSON)
+    public Response checkUsernameAvailability(@Parameter(name = "username") @QueryParam("username") String username) {
+        return Response.ok(new UsernameAvailabilityResponse(username, !isUserNameInUse(username))).build();
+    }
+
+    private boolean isUserNameInUse(String username) {
+        return userManagementService.load(username) != null;
+    }
+
+    private void validatePasswordComplexity(String password) {
+        PasswordComplexityConfig config = clusterConfigService.getOrDefault(PasswordComplexityConfig.class, PasswordComplexityConfig.DEFAULT);
+
+        StringBuilder errorMessages = new StringBuilder();
+        if (password == null || password.isBlank()) {
+            errorMessages.append("Password cannot be empty.");
+        } else {
+            if (password.length() < config.minLength()) {
+                errorMessages.append("Password must be at least ").append(config.minLength()).append(" characters long.\n");
             }
+            if (config.requireUppercase() && password.chars().noneMatch(Character::isUpperCase)) {
+                errorMessages.append("Password must contain at least one uppercase letter.\n");
+            }
+            if (config.requireLowercase() && password.chars().noneMatch(Character::isLowerCase)) {
+                errorMessages.append("Password must contain at least one lowercase letter.\n");
+            }
+            if (config.requireNumbers() && password.chars().noneMatch(Character::isDigit)) {
+                errorMessages.append("Password must contain at least one number.\n");
+            }
+            if (config.requireSpecialCharacters() && password.chars().noneMatch(SPECIAL_CHARACTERS_CODEPOINTS::contains)) {
+                errorMessages.append("Password must contain at least one special character from: ").append(SPECIAL_CHARACTERS).append("\n");
+            }
+        }
+
+        if (!errorMessages.isEmpty()) {
+            String msg = errorMessages.toString();
+            LOG.error(msg);
+            throw new BadRequestException(msg);
+        }
+    }
+
+    private void setUserRoles(@Nullable List<String> roles, User user, UserContext userContext) {
+        if (roles == null) {
+            return;
+        }
+
+        try {
+            final Map<String, Role> nameMap = roleService.loadAllLowercaseNameMap();
+            final Map<String, String> idToNameMap = nameMap.values().stream()
+                    .collect(Collectors.toMap(Role::getId, r -> r.getName().toLowerCase(Locale.US)));
+
+            final Set<String> normalizedRoles = roles.stream()
+                    .map(r -> r.toLowerCase(Locale.US))
+                    .collect(Collectors.toSet());
+
+            final List<String> unknownRoles = normalizedRoles.stream()
+                    .filter(r -> !nameMap.containsKey(r)).toList();
+
+            if (!unknownRoles.isEmpty()) {
+                throw new BadRequestException(
+                        String.format(Locale.ENGLISH, "Invalid role names: %s", String.join(", ", unknownRoles))
+                );
+            }
+
+            final Set<String> currentRoleNames = user.getRoleIds().stream()
+                    .map(idToNameMap::get)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toSet());
+            final Set<String> changedRoles = Sets.symmetricDifference(normalizedRoles, currentRoleNames);
+
+            for (String changedRole : changedRoles) {
+                checkPermission(RestPermissions.ROLES_ASSIGN, nameMap.get(changedRole).getName());
+            }
+
+            final Set<String> roleIds = normalizedRoles.stream()
+                    .map(nameMap::get)
+                    .map(Role::getId)
+                    .collect(Collectors.toSet());
+
+            user.setRoleIds(roleIds);
+            auditEventSender.success(AuditActor.user(userContext.getUser().getName()),
+                    AuditEventTypes.USER_ROLES_UPDATE,
+                    ImmutableMap.of("roles", String.join(",", normalizedRoles),
+                            "userName", user.getName(),
+                            "userId", user.getId()));
+
+        } catch (org.graylog2.database.NotFoundException e) {
+            throw new InternalServerErrorException(e);
         }
     }
 
     @PUT
     @Path("{userId}")
-    @ApiOperation("Modify user details.")
+    @Operation(summary = "Modify user details.")
     @ApiResponses({
-            @ApiResponse(code = 400, message = "Attempted to modify a read only user account (e.g. built-in or LDAP users)."),
-            @ApiResponse(code = 400, message = "Missing or invalid user details.")
+            @ApiResponse(responseCode = "204", description = "Success"),
+            @ApiResponse(responseCode = "400", description = "Attempted to modify a read only user account (e.g. built-in or LDAP users)."),
+            @ApiResponse(responseCode = "400", description = "Missing or invalid user details.")
     })
     @AuditEvent(type = AuditEventTypes.USER_UPDATE)
-    public void changeUser(@ApiParam(name = "userId", value = "The ID of the user to modify.", required = true)
+    public void changeUser(@Parameter(name = "userId", description = "The ID of the user to modify.", required = true)
                            @PathParam("userId") String userId,
-                           @ApiParam(name = "JSON body", value = "Updated user information.", required = true)
-                           @Valid @NotNull ChangeUserRequest cr) throws ValidationException {
+                           @RequestBody(description = "Updated user information.", required = true)
+                           @Valid @NotNull ChangeUserRequest cr,
+                           @Context UserContext userContext) throws ValidationException {
 
         final User user = loadUserById(userId);
         final String username = user.getName();
@@ -439,7 +566,7 @@ public class UsersResource extends RestResource {
 
         if (isPermitted(USERS_ROLESEDIT, user.getName())) {
             checkAdminRoleForServiceAccount(cr, user);
-            setUserRoles(cr.roles(), user);
+            setUserRoles(cr.roles(), user, userContext);
         }
 
         final String timezone = cr.timezone();
@@ -457,11 +584,7 @@ public class UsersResource extends RestResource {
                 LOG.error("Invalid timezone '{}', ignoring it for user {}.", timezone, username);
             }
         }
-
-        final Startpage startpage = cr.startpage();
-        if (startpage != null) {
-            user.setStartpage(startpage.type(), startpage.id());
-        }
+        user.setStartpage(cr.startpage());
 
         if (isPermitted("*")) {
             final Long sessionTimeoutMs = cr.sessionTimeoutMs();
@@ -513,12 +636,16 @@ public class UsersResource extends RestResource {
 
     @DELETE
     @Path("{username}")
-    @RequiresPermissions(USERS_EDIT)
-    @ApiOperation("Removes a user account.")
-    @ApiResponses({@ApiResponse(code = 400, message = "When attempting to remove a read only user (e.g. built-in or LDAP user).")})
+    @Operation(summary = "Removes a user account.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "204", description = "Success"),
+            @ApiResponse(responseCode = "400", description = "When attempting to remove a read only user (e.g. built-in or LDAP user).")
+    })
     @AuditEvent(type = AuditEventTypes.USER_DELETE)
-    public void deleteUser(@ApiParam(name = "username", value = "The name of the user to delete.", required = true)
+    public void deleteUser(@Parameter(name = "username", description = "The name of the user to delete.", required = true)
                            @PathParam("username") String username) {
+        checkPermission(USERS_EDIT, username);
+
         if (userManagementService.delete(username) == 0) {
             throw new NotFoundException("Couldn't find user " + username);
         }
@@ -526,12 +653,17 @@ public class UsersResource extends RestResource {
 
     @DELETE
     @Path("id/{userId}")
-    @RequiresPermissions(USERS_EDIT)
-    @ApiOperation("Removes a user account.")
-    @ApiResponses({@ApiResponse(code = 400, message = "When attempting to remove a read only user (e.g. built-in or LDAP user).")})
+    @Operation(summary = "Removes a user account.")
+    @ApiResponses({
+            @ApiResponse(responseCode = "204", description = "Success"),
+            @ApiResponse(responseCode = "400", description = "When attempting to remove a read only user (e.g. built-in or LDAP user).")
+    })
     @AuditEvent(type = AuditEventTypes.USER_DELETE)
-    public void deleteUserById(@ApiParam(name = "userId", value = "The id of the user to delete.", required = true)
+    public void deleteUserById(@Parameter(name = "userId", description = "The id of the user to delete.", required = true)
                                @PathParam("userId") String userId) {
+        final User user = loadUserById(userId);
+        checkPermission(USERS_EDIT, user.getName());
+
         if (userManagementService.deleteById(userId) == 0) {
             throw new NotFoundException("Couldn't find user " + userId);
         }
@@ -540,14 +672,15 @@ public class UsersResource extends RestResource {
     @PUT
     @Path("{username}/permissions")
     @RequiresPermissions(RestPermissions.USERS_PERMISSIONSEDIT)
-    @ApiOperation("Update a user's permission set.")
+    @Operation(summary = "Update a user's permission set.")
     @ApiResponses({
-            @ApiResponse(code = 400, message = "Missing or invalid permission data.")
+            @ApiResponse(responseCode = "204", description = "Success"),
+            @ApiResponse(responseCode = "400", description = "Missing or invalid permission data.")
     })
     @AuditEvent(type = AuditEventTypes.USER_PERMISSIONS_UPDATE)
-    public void editPermissions(@ApiParam(name = "username", value = "The name of the user to modify.", required = true)
+    public void editPermissions(@Parameter(name = "username", description = "The name of the user to modify.", required = true)
                                 @PathParam("username") String username,
-                                @ApiParam(name = "JSON body", value = "The list of permissions to assign to the user.", required = true)
+                                @RequestBody(description = "The list of permissions to assign to the user.", required = true)
                                 @Valid @NotNull PermissionEditRequest permissionRequest) throws ValidationException {
         final User user = userManagementService.load(username);
         if (user == null) {
@@ -560,17 +693,18 @@ public class UsersResource extends RestResource {
 
     @PUT
     @Path("{username}/preferences")
-    @ApiOperation("Update a user's preferences set.")
+    @Operation(summary = "Update a user's preferences set.")
     @ApiResponses({
-            @ApiResponse(code = 400, message = "Missing or invalid permission data.")
+            @ApiResponse(responseCode = "204", description = "Success"),
+            @ApiResponse(responseCode = "400", description = "Missing or invalid permission data.")
     })
     @AuditEvent(type = AuditEventTypes.USER_PREFERENCES_UPDATE)
-    public void savePreferences(@ApiParam(name = "username", value = "The name of the user to modify.", required = true)
+    public void savePreferences(@Parameter(name = "username", description = "The name of the user to modify.", required = true)
                                 @PathParam("username") String username,
-                                @ApiParam(name = "JSON body", value = "The map of preferences to assign to the user.", required = true)
+                                @RequestBody(description = "The map of preferences to assign to the user.", required = true)
                                 UpdateUserPreferences preferencesRequest) throws ValidationException {
         final User user = userManagementService.load(username);
-        checkPermission(RestPermissions.USERS_EDIT, username);
+        checkPermission(USERS_EDIT, username);
 
         if (user == null) {
             throw new NotFoundException("Couldn't find user " + username);
@@ -583,12 +717,13 @@ public class UsersResource extends RestResource {
     @DELETE
     @Path("{username}/permissions")
     @RequiresPermissions(RestPermissions.USERS_PERMISSIONSEDIT)
-    @ApiOperation("Revoke all permissions for a user without deleting the account.")
+    @Operation(summary = "Revoke all permissions for a user without deleting the account.")
     @ApiResponses({
-            @ApiResponse(code = 500, message = "When saving the user failed.")
+            @ApiResponse(responseCode = "204", description = "Success"),
+            @ApiResponse(responseCode = "500", description = "When saving the user failed.")
     })
     @AuditEvent(type = AuditEventTypes.USER_PERMISSIONS_DELETE)
-    public void deletePermissions(@ApiParam(name = "username", value = "The name of the user to modify.", required = true)
+    public void deletePermissions(@Parameter(name = "username", description = "The name of the user to modify.", required = true)
                                   @PathParam("username") String username) throws ValidationException {
         final User user = userManagementService.load(username);
         if (user == null) {
@@ -600,18 +735,18 @@ public class UsersResource extends RestResource {
 
     @PUT
     @Path("{userId}/password")
-    @ApiOperation("Update the password for a user.")
+    @Operation(summary = "Update the password for a user.")
     @ApiResponses({
-            @ApiResponse(code = 204, message = "The password was successfully updated. Subsequent requests must be made with the new password."),
-            @ApiResponse(code = 400, message = "The new password is missing, or the old password is missing or incorrect."),
-            @ApiResponse(code = 403, message = "The requesting user has insufficient privileges to update the password for the given user."),
-            @ApiResponse(code = 404, message = "User does not exist.")
+            @ApiResponse(responseCode = "204", description = "The password was successfully updated. Subsequent requests must be made with the new password."),
+            @ApiResponse(responseCode = "400", description = "The new password is missing, or the old password is missing or incorrect."),
+            @ApiResponse(responseCode = "403", description = "The requesting user has insufficient privileges to update the password for the given user."),
+            @ApiResponse(responseCode = "404", description = "User does not exist.")
     })
     @AuditEvent(type = AuditEventTypes.USER_PASSWORD_UPDATE)
     public void changePassword(
-            @ApiParam(name = "userId", value = "The id of the user whose password to change.", required = true)
+            @Parameter(name = "userId", description = "The id of the user whose password to change.", required = true)
             @PathParam("userId") String userId,
-            @ApiParam(name = "JSON body", value = "The old and new passwords.", required = true)
+            @RequestBody(description = "The old and new passwords.", required = true)
             @Valid ChangePasswordRequest cr) throws ValidationException {
 
         final User user = loadUserById(userId);
@@ -649,6 +784,7 @@ public class UsersResource extends RestResource {
         }
 
         if (changeAllowed) {
+            validatePasswordComplexity(cr.password());
             if (checkOldPassword) {
                 userManagementService.changePassword(user, cr.oldPassword(), cr.password());
             } else {
@@ -662,13 +798,13 @@ public class UsersResource extends RestResource {
     @PUT
     @Path("{userId}/status/{newStatus}")
     @Consumes(MediaType.WILDCARD)
-    @ApiOperation("Update the account status for a user")
+    @Operation(summary = "Update the account status for a user")
     @AuditEvent(type = AuditEventTypes.USER_UPDATE)
     public Response updateAccountStatus(
-            @ApiParam(name = "userId", value = "The id of the user whose status to change.", required = true)
+            @Parameter(name = "userId", description = "The id of the user whose status to change.", required = true)
             @PathParam("userId") @NotBlank String userId,
-            @ApiParam(name = "newStatus", value = "The account status to be set", required = true,
-                      defaultValue = "enabled", allowableValues = "enabled,disabled,deleted")
+            @Parameter(name = "newStatus", description = "The account status to be set", required = true,
+                      schema = @Schema(allowableValues = {"enabled", "disabled", "deleted"}))
             @PathParam("newStatus") @NotBlank String newStatusString,
             @Context UserContext userContext) throws ValidationException {
 
@@ -678,7 +814,7 @@ public class UsersResource extends RestResource {
 
         final User.AccountStatus newStatus = User.AccountStatus.valueOf(newStatusString.toUpperCase(Locale.US));
         final User user = loadUserById(userId);
-        checkPermission(RestPermissions.USERS_EDIT, user.getName());
+        checkPermission(USERS_EDIT, user.getName());
         final User.AccountStatus oldStatus = user.getAccountStatus();
 
         if (oldStatus.equals(newStatus)) {
@@ -691,8 +827,8 @@ public class UsersResource extends RestResource {
 
     @GET
     @Path("{userId}/tokens")
-    @ApiOperation("Retrieves the list of access tokens for a user")
-    public TokenList listTokens(@ApiParam(name = "userId", required = true)
+    @Operation(summary = "Retrieves the list of access tokens for a user")
+    public TokenList listTokens(@Parameter(name = "userId", required = true)
                                 @PathParam("userId") String userId) {
         final User user = loadUserById(userId);
         final String username = user.getName();
@@ -703,7 +839,7 @@ public class UsersResource extends RestResource {
 
         final ImmutableList.Builder<TokenSummary> tokenList = ImmutableList.builder();
         for (AccessToken token : accessTokenService.loadAll(user.getName())) {
-            tokenList.add(TokenSummary.create(token.getId(), token.getName(), token.getLastAccess()));
+            tokenList.add(TokenSummary.create(token.getId(), token.getName(), token.getLastAccess(), token.getCreatedAt(), token.getExpiresAt()));
         }
 
         return TokenList.create(tokenList.build());
@@ -711,29 +847,33 @@ public class UsersResource extends RestResource {
 
     @POST
     @Path("{userId}/tokens/{name}")
-    @ApiOperation("Generates a new access token for a user")
+    @Operation(summary = "Generates a new access token for a user")
     @AuditEvent(type = AuditEventTypes.USER_ACCESS_TOKEN_CREATE)
     public Token generateNewToken(
-            @ApiParam(name = "userId", required = true) @PathParam("userId") String userId,
-            @ApiParam(name = "name", value = "Descriptive name for this token (e.g. 'cronjob') ", required = true) @PathParam("name") String name,
-            @ApiParam(name = "JSON Body", value = "Placeholder because POST requests should have a body. Set to '{}', the content will be ignored.", defaultValue = "{}") String body) {
-        final User user = loadUserById(userId);
-        final String username = user.getName();
-        if (!isPermitted(USERS_TOKENCREATE, username)) {
-            throw new ForbiddenException("Not allowed to create tokens for user " + username);
+            @Parameter(name = "userId", required = true) @PathParam("userId") String userId,
+            @Parameter(name = "name", description = "Descriptive name for this token (e.g. 'cronjob') ", required = true) @PathParam("name") String name,
+            @RequestBody(description = "Can optionally contain the token's TTL.") GenerateTokenTTL body) {
+        final User futureOwner = loadUserById(userId);
+
+        if (!isPermitted(USERS_TOKENCREATE, futureOwner.getName())) {
+            throw new ForbiddenException("You are not allowed to create a token for user " + futureOwner.getName() + ".");
         }
-        final AccessToken accessToken = accessTokenService.create(user.getName(), name);
+
+        if (body == null) {
+            body = new GenerateTokenTTL(Optional.empty());
+        }
+        final AccessToken accessToken = accessTokenService.create(futureOwner.getName(), name, body.getTTL(() -> clusterConfigService.getOrDefault(UserConfiguration.class, UserConfiguration.DEFAULT_VALUES).defaultTTLForNewTokens()));
 
         return Token.create(accessToken.getId(), accessToken.getName(), accessToken.getToken(), accessToken.getLastAccess());
     }
 
     @DELETE
     @Path("{userId}/tokens/{idOrToken}")
-    @ApiOperation("Removes a token for a user")
+    @Operation(summary = "Removes a token for a user")
     @AuditEvent(type = AuditEventTypes.USER_ACCESS_TOKEN_DELETE)
     public void revokeToken(
-            @ApiParam(name = "userId", required = true) @PathParam("userId") String userId,
-            @ApiParam(name = "idOrToken", required = true) @PathParam("idOrToken") String idOrToken) {
+            @Parameter(name = "userId", required = true) @PathParam("userId") String userId,
+            @Parameter(name = "idOrToken", required = true) @PathParam("idOrToken") String idOrToken) {
         final User user = loadUserById(userId);
         final String username = user.getName();
         if (!isPermitted(USERS_TOKENREMOVE, username)) {
@@ -762,10 +902,6 @@ public class UsersResource extends RestResource {
         return user;
     }
 
-    private UserSummary toUserResponse(User user, AllUserSessions sessions) {
-        return toUserResponse(user, true, Optional.of(sessions));
-    }
-
     private UserSummary toUserResponse(User user, boolean includePermissions, Optional<AllUserSessions> optSessions) {
         final Set<String> roleIds = user.getRoleIds();
         Set<String> roleNames = Collections.emptySet();
@@ -783,22 +919,22 @@ public class UsersResource extends RestResource {
         String clientAddress = null;
         if (optSessions.isPresent()) {
             final AllUserSessions sessions = optSessions.get();
-            final Optional<MongoDbSession> mongoDbSession = sessions.forUser(user);
+            final Optional<SessionDTO> mongoDbSession = sessions.forUser(user);
             if (mongoDbSession.isPresent()) {
-                final MongoDbSession session = mongoDbSession.get();
+                final SessionDTO session = mongoDbSession.get();
                 sessionActive = true;
-                lastActivity = session.getLastAccessTime();
-                clientAddress = session.getHost();
+                lastActivity = Date.from(session.lastAccessTime());
+                clientAddress = session.host().orElse(null);
             }
         }
         List<WildcardPermission> wildcardPermissions;
         List<GRNPermission> grnPermissions;
         if (includePermissions) {
-            wildcardPermissions = userManagementService.getWildcardPermissionsForUser(user);
+            wildcardPermissions = addUserIdPermissions(userManagementService.getWildcardPermissionsForUser(user), user);
             grnPermissions = userManagementService.getGRNPermissionsForUser(user);
         } else {
-            wildcardPermissions = ImmutableList.of();
-            grnPermissions = ImmutableList.of();
+            wildcardPermissions = List.of();
+            grnPermissions = List.of();
         }
 
         final Optional<AuthServiceBackendDTO> activeAuthService = globalAuthServiceConfig.getActiveBackendConfig();
@@ -846,52 +982,90 @@ public class UsersResource extends RestResource {
         return result;
     }
 
-    private UserOverviewDTO getAdminUserDTO(AllUserSessions sessions) {
-        final Optional<User> optionalAdmin = userManagementService.getRootUser();
-        if (!optionalAdmin.isPresent()) {
-            return null;
+    private Optional<UserOverviewDTO> getAdminUserDTO(AllUserSessions sessions) {
+        return userManagementService
+                .getRootUser()
+                .filter(rootUser -> isPermitted(USERS_READ, rootUser.getName()))
+                .map(rootUser -> {
+                    final Set<String> adminRoles = userManagementService.getRoleNames(rootUser);
+                    final Optional<SessionDTO> lastSession = sessions.forUser(rootUser);
+                    return UserOverviewDTO.builder()
+                            .username(rootUser.getName())
+                            .fullName(rootUser.getFullName())
+                            .email(rootUser.getEmail())
+                            .externalUser(rootUser.isExternalUser())
+                            .readOnly(rootUser.isReadOnly())
+                            .id(rootUser.getId())
+                            .fillSession(lastSession)
+                            .roles(adminRoles)
+                            .build();
+                });
+    }
+
+    /**
+     * This method duplicates username-based user permissions with userId variants
+     * (users:<action>:<userId>) so the UI can work when only the userId is known.
+     * Do NOT add these id-based variants for backend authorization; server-side
+     * permission checks must continue to use the original username form.
+     */
+    private List<WildcardPermission> addUserIdPermissions(List<WildcardPermission> permissions, User user) {
+        ImmutableSet.Builder<WildcardPermission> builder = ImmutableSet.builder();
+        final Map<String, String> userIdCache = new HashMap<>();
+        if (user != null) {
+            userIdCache.put(user.getName(), user.getId());
         }
-        final User admin = optionalAdmin.get();
-        final Set<String> adminRoles = userManagementService.getRoleNames(admin);
-        final Optional<MongoDbSession> lastSession = sessions.forUser(admin);
-        return UserOverviewDTO.builder()
-                .username(admin.getName())
-                .fullName(admin.getFullName())
-                .email(admin.getEmail())
-                .externalUser(admin.isExternalUser())
-                .readOnly(admin.isReadOnly())
-                .id(admin.getId())
-                .fillSession(lastSession)
-                .roles(adminRoles)
-                .build();
+        for (WildcardPermission permission : permissions) {
+            String[] parts = permission.toString().split(":");
+            boolean hasUsername = parts.length == USERNAME_PERMISSION_PARTS_LENGTH && USER_PERMISSION_DOMAIN.equals(parts[0]);
+            if (hasUsername) {
+                String username = parts[parts.length-1];
+                String userId = userIdCache.computeIfAbsent(username, name -> {
+                    final User loadedUser = userManagementService.load(name);
+                    return loadedUser != null ? loadedUser.getId() : null;
+                });
+                if (userId != null) {
+                    parts[2] = userId;
+                    builder.add(new CaseSensitiveWildcardPermission(String.join(":", parts)));
+                }
+            }
+
+        }
+        return builder.addAll(permissions).build().asList();
+    }
+
+    public record GenerateTokenTTL(@JsonProperty Optional<PeriodDuration> tokenTTL) {
+        public PeriodDuration getTTL(Supplier<PeriodDuration> defaultSupplier) {
+            return this.tokenTTL.orElseGet(defaultSupplier);
+        }
     }
 
     private static class AllUserSessions {
-        private final Map<String, Optional<MongoDbSession>> sessions;
+        private final Map<String, Optional<SessionDTO>> sessions;
 
-        public static AllUserSessions create(MongoDBSessionService sessionService) {
-            return new AllUserSessions(sessionService.loadAll());
+        public static AllUserSessions create(SessionService sessionService) {
+            try (var sessionDTOStream = sessionService.streamAll()) {
+                return new AllUserSessions(sessionDTOStream.toList());
+            }
         }
 
-        private AllUserSessions(Collection<MongoDbSession> sessions) {
+        private AllUserSessions(Collection<SessionDTO> sessions) {
             this.sessions = getLastSessionForUser(sessions);
         }
 
-        public Optional<MongoDbSession> forUser(User user) {
+        public Optional<SessionDTO> forUser(User user) {
             return sessions.getOrDefault(user.getId(), Optional.empty());
         }
 
-        public Optional<MongoDbSession> forUser(UserOverviewDTO user) {
+        public Optional<SessionDTO> forUser(UserOverviewDTO user) {
             return sessions.getOrDefault(user.id(), Optional.empty());
         }
 
         // Among all active sessions, find the last recently used for each user
-        private Map<String, Optional<MongoDbSession>> getLastSessionForUser(Collection<MongoDbSession> sessions) {
-            //noinspection OptionalGetWithoutIsPresent
+        private Map<String, Optional<SessionDTO>> getLastSessionForUser(Collection<SessionDTO> sessions) {
             return sessions.stream()
-                    .filter(s -> s.getUserIdAttribute().isPresent())
-                    .collect(groupingBy(s -> s.getUserIdAttribute().get(),
-                            maxBy(Comparator.comparing(MongoDbSession::getLastAccessTime))));
+                    .filter(s -> s.userId().isPresent())
+                    .collect(groupingBy(s -> s.userId().get(),
+                            maxBy(Comparator.comparing(SessionDTO::lastAccessTime))));
         }
     }
 }
